--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "raw-loader": "^4.0.2",
     "style-loader": "^2.0.0",
     "three": "^0.125.0",
+    "three-mesh-ui": "^4.4.9",
     "webpack": "^5.14.0",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.2",
